# SPHinXsys

./: .gitmodules  CMakeLists.txt
cmake/: Dependency_free_settings.cmake  Import3rdpartylibs.cmake
tests/: CMakeLists.txt
